--- a/style.css
+++ b/style.css
@@ -57,3 +57,21 @@ p {
     color:peru;
 }
 
+.quiz {
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-left: 50px;
+}
+
+input {
+    margin-left:50px;
+    width: 200px;
+    height: 20px;
+}
+
+button {
+    cursor:pointer;
+    margin-top: 60px;
+    margin-bottom:10px;
+}
